--- a/calc.html
+++ b/calc.html
@@ -630,7 +630,7 @@
 
     //绑定从者职介信息
     function bindServantCareerSkillInfo(servant) {
-        //{ cardColor: 1, cardBuff: 10, fixedDamageBuff: 0, critialPowerBuff: 0 }
+        //{ cardColor: 1, cardBuff: 10, fixedDamageBuff: 0}
         let careerSkill = servant.careerSkill;
 
         if (careerSkill) {
